kubernetes/installation-guide/manifests/edge-microgateway-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-microgateway-load-balancer
spec:
  externalTrafficPolicy: Local
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: edge-microgateway
  type: LoadBalancer
