kubernetes/installation-guide/manifests/edge-microgateway-istio-gateway-http-manifests.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edge-microgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: edge-microgateway
spec:
  hosts:
  - "*"
  gateways:
  - edge-microgateway
  http:
    - route:
      - destination:
          host: edge-microgateway
          port:
            number: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: edge-microgateway
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: edge-microgateway
  type: ClusterIP
